--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ footer{
       width:100%;
     }
   
-    #newsletter form input[type="email"], .quote input, .quote textarea{
+    #newsletter form input, .quote input, .quote textarea{
       width:100%;
       margin-bottom:5px;
     }
