--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body{
 }
 .button{
     height: 38px;
-    background: #e8491d;
+    background: #37abf4;
+    /* #e8491 */
     border:none;
     padding-left: 20px;
     padding-right: 20px;
@@ -20,7 +21,7 @@ body{
 
 }
 .dark{
-    background: #35424a;
+    background: #465359;
     color: #f4f4f4;
     padding: 15px;
     margin-top:10px;
@@ -30,11 +31,11 @@ body{
 
 /* Header */
 header{
-    background-color: #35424a;
+    background-color: #12314d;
     color: white;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: #e8491d 3px solid;
+    border-bottom: #4ebafe 3px solid;
 }
 header a{
     color: #f4f4f4;
@@ -62,11 +63,11 @@ header nav{
     margin-top: 10px;
 }
 header .highlight, header .current a{
-    color:#e8491d;
+    color:#4ebafe;
     font-weight:bold;
 }
 header a:hover {
-    color: #f47b5a;
+    color: #77c5f5;
     font-weight: bolder;
 
 }
@@ -89,7 +90,7 @@ header a:hover {
 
 /* newsletter */
 #newsletter{
-    background-color: #35424a;
+    background-color: #12314d;
     padding: 20px;
     color: #f4f4f4;
 
@@ -154,7 +155,7 @@ footer{
     margin-top: 20px;
     color: #f4f4f4;
     text-align: center;
-    background: #e8491d;
+    background: #39a5e8;
 }
 
 /* media queries///  // */
